subiendo de todo pe, menos las acciones reales de los eventos del menu